<resources>
    <string name="app_name">米米乐</string>
    <string name="title_home">首页</string>
    <string name="title_type_list">分类</string>
    <string name="title_cart">购物车</string>
    <string name="title_user">我的</string>
    <string name="search_edit_text_home">7.20小米品牌日</string>
    <string name="search_button">搜索</string>
    <string name="search_activity">搜索界面</string>
    <string name="goods_list">商品列表</string>
    <string name="title_activity_login">Sign in</string>
    <string name="sales_ranking">销量排行</string>
    <string name="cart_blank">购物车为空</string>
    <string name="users_info">用户信息</string>
    <string name="user_points">积分余额</string>
    <string name="user_address">收货地址</string>
    <string name="user_collection">我的收藏</string>
    <string name="user_record">浏览记录</string>
    <string name="order_unpayed">未付款</string>
    <string name="order_unreceived">在途中</string>
    <string name="order_unrated">未评价</string>
    <string name="order_all">全部订单</string>
    <string name="settings">设置</string>
    <string name="safety">账户安全</string>
    <string name="user_wallet">钱包</string>
    <string name="logout">退出登录</string>
    <string name="login">登录</string>
    <string name="sign_up">注册账号</string>
    <string name="forget_password">忘记密码</string>
    <string name="remember_password">记住密码</string>
    <string name="change_password">修改密码</string>
    <string name="account_appeal">账号申诉</string>
    <string name="auto_sign_in">自动登录</string>
    <string name="clear_cache">清除缓存</string>
    <string name="about_us">关于</string>
    <string name="developer">开发者</string>
    <string name="contact_us">联系我们</string>
    <string name="servlet_ip">"http://192.168.1.102:8080/"</string>
    <string name="sign_in_servlet">"MML/LoginServlet"</string>
    <string name="sign_up_servlet">"MML/SignWithPasswordServlet"</string>
    <string name="verify_servlet">"MML/SignUpServlet"</string>


    <!-- Strings related to login -->
    <string name="prompt_email">手机号</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_email">手机号有误</string>
    <string name="error_invalid_password">密码太短</string>
    <string name="error_incorrect_password">密码有误</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
