<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/login_phone_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">

        <ImageView
            android:id="@+id/login_phone_icon"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/login_phone"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/login_phone_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+86"
            android:textSize="20sp"
            android:textColor="@color/color_light_gray"
            android:gravity="center"
            android:layout_marginLeft="10dp"/>

        <EditText
            android:textCursorDrawable="@drawable/cursor_color"
            android:id="@+id/login_phone_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:layout_marginLeft="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_keyword_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/login_keyword_icon"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/login_keywords"
            android:layout_gravity="center"/>


        <EditText
            android:textCursorDrawable="@drawable/cursor_color"
            android:id="@+id/login_keyword_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:shadowColor="@color/color_light_gray"
            android:layout_marginLeft="10dp"/>

    </LinearLayout>

    <CheckBox
        android:id="@+id/remember_password_checkbox"
        style="@style/CustomCheckBoxTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/remember_password"
        android:layout_marginTop="20dp" />


    <Button
        android:id="@+id/login_button"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/login"
        android:textSize="18dp"
        android:textColor="@color/color_white"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:background="@color/colorPrimary"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/sign_up"
            android:textSize="14dp"
            android:textColor="@color/colorPrimary"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@android:color/transparent"/>

        <Button
            android:id="@+id/forget_password_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/forget_password"
            android:textSize="14dp"
            android:textColor="@color/colorPrimary"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@android:color/transparent"/>
    </LinearLayout>

</LinearLayout>
