<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/user_avatar_layout"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:orientation="horizontal"
        android:background="@drawable/gra_shape">

        <Button
            android:id="@+id/user_avatar_image"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="40dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/user_avatar"/>

        <TextView
            android:id="@+id/user_name_text_view"
            android:text="点击登录"
            android:textSize="20dp"
            android:textColor="@color/color_white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp" />

    </LinearLayout>

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/user_scroll_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        android:fadingEdge="vertical">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity">

            <!-- User attributes -->
            <LinearLayout
                android:id="@+id/user_attr_layout"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:background="@drawable/boder">

                <LinearLayout
                    android:id="@+id/user_points"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/user_points_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_marginTop="25dp"
                        android:layout_marginBottom="5dp"
                        android:src="@drawable/user_points" />

                    <TextView
                        android:id="@+id/user_points_text"
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:text="@string/user_points"
                        android:textSize="12dp"
                        android:textColor="@color/color_dark_gray"
                        android:layout_gravity="center"
                        android:gravity="center"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/user_address"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/user_address_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_marginTop="25dp"
                        android:layout_marginBottom="5dp"
                        android:src="@drawable/user_address" />

                    <TextView
                        android:id="@+id/user_address_text"
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:text="@string/user_address"
                        android:textSize="12dp"
                        android:textColor="@color/color_dark_gray"
                        android:layout_gravity="center"
                        android:gravity="center"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/user_collection"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/user_collection_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_marginTop="25dp"
                        android:layout_marginBottom="5dp"
                        android:src="@drawable/user_collection" />

                    <TextView
                        android:id="@+id/user_collection_text"
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:text="@string/user_collection"
                        android:textSize="12dp"
                        android:textColor="@color/color_dark_gray"
                        android:layout_gravity="center"
                        android:gravity="center"/>


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/user_record"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/user_record_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_marginTop="25dp"
                        android:layout_marginBottom="5dp"
                        android:src="@drawable/user_record" />

                    <TextView
                        android:id="@+id/user_record_text"
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:text="@string/user_record"
                        android:textSize="12dp"
                        android:textColor="@color/color_dark_gray"
                        android:layout_gravity="center"
                        android:gravity="center"/>


                </LinearLayout>

            </LinearLayout>

            <!-- Orders -->
            <LinearLayout
                android:id="@+id/user_order_layout"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:background="@drawable/boder">

                <LinearLayout
                    android:id="@+id/user_order_unPayed"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/user_order_unPayed_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_marginTop="25dp"
                        android:layout_marginBottom="5dp"
                        android:src="@drawable/order_unpayed" />

                    <TextView
                        android:id="@+id/user_order_unPayed_text"
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:text="@string/order_unpayed"
                        android:textSize="12dp"
                        android:textColor="@color/color_dark_gray"
                        android:layout_gravity="center"
                        android:gravity="center"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/user_order_unReceived"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/user_order_unReceived_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_marginTop="25dp"
                        android:layout_marginBottom="5dp"
                        android:src="@drawable/order_unreceived" />

                    <TextView
                        android:id="@+id/user_order_unReceived_text"
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:text="@string/order_unreceived"
                        android:textSize="12dp"
                        android:textColor="@color/color_dark_gray"
                        android:layout_gravity="center"
                        android:gravity="center"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/user_order_unrated"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/user_unrated_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_marginTop="25dp"
                        android:layout_marginBottom="5dp"
                        android:src="@drawable/order_unrated" />

                    <TextView
                        android:id="@+id/user_unrated_text"
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:text="@string/order_unrated"
                        android:textSize="12dp"
                        android:textColor="@color/color_dark_gray"
                        android:layout_gravity="center"
                        android:gravity="center"/>


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/user_order_all"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/user_order_all_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_marginTop="25dp"
                        android:layout_marginBottom="5dp"
                        android:src="@drawable/order_all" />

                    <TextView
                        android:id="@+id/user_order_all_text"
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:text="@string/order_all"
                        android:textSize="12dp"
                        android:textColor="@color/color_dark_gray"
                        android:layout_gravity="center"
                        android:gravity="center"/>


                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/user_safety"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:background="@drawable/boder" >

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/user_safety"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="30dp"/>

                <TextView
                    android:id="@+id/user_safety_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/safety"
                    android:textSize="18dp"
                    android:textColor="@color/color_dark_gray"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp"/>

                <TextView
                    android:id="@+id/user_safety_note"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="15dp"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="密码/支付管理等"
                    android:textColor="@color/color_light_gray"
                    android:textSize="12dp" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/arrow_right_dark_gray"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="10dp"/>
            </LinearLayout>


            <LinearLayout
                android:id="@+id/settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:background="@drawable/boder" >

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/settings"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="30dp"/>

                <TextView
                    android:id="@+id/settings_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/settings"
                    android:textSize="18dp"
                    android:textColor="@color/color_dark_gray"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp"/>

                <TextView
                    android:id="@+id/settings_note"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="15dp"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="清除缓存/关于等"
                    android:textColor="@color/color_light_gray"
                    android:textSize="12dp" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/arrow_right_dark_gray"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="10dp"/>
            </LinearLayout>



            <LinearLayout
                android:id="@+id/logout_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:background="@drawable/boder" >

                <TextView
                    android:id="@+id/logout_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/logout"
                    android:textSize="18dp"
                    android:textColor="@color/color_dark_gray"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp"/>

            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</LinearLayout>