<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/cart_title_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="vertical"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/cart_title_name"
            android:text="@string/settings"
            android:textSize="20dp"
            android:textColor="@color/color_white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/clear_cache"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:background="@drawable/boder" >

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/clear_cache"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/clear_cache"
                android:textSize="18dp"
                android:textColor="@color/color_dark_gray"
                android:gravity="center_vertical"/>

            <TextView
                android:id="@+id/current_cache"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="0.0Bytes"
                android:textColor="@color/color_light_gray"
                android:textSize="12dp" />
        </LinearLayout>

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/arrow_right_dark_gray"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/about_us"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:background="@drawable/boder" >

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/about_us"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/about_us"
                android:textSize="18dp"
                android:textColor="@color/color_dark_gray"
                android:gravity="center_vertical"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="应用程序版本号"
                android:textColor="@color/color_light_gray"
                android:textSize="12dp" />
        </LinearLayout>

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/arrow_right_dark_gray"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/developer"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:background="@drawable/boder" >

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/developer"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/developer"
                android:textSize="18dp"
                android:textColor="@color/color_dark_gray"
                android:gravity="center_vertical"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="全体开发者向您致敬"
                android:textColor="@color/color_light_gray"
                android:textSize="12dp" />
        </LinearLayout>

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/arrow_right_dark_gray"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/contact_us"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:background="@drawable/boder" >

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/contact_us"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/contact_us"
                android:textSize="18dp"
                android:textColor="@color/color_dark_gray"
                android:gravity="center_vertical"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="欢迎向我们提出建议"
                android:textColor="@color/color_light_gray"
                android:textSize="12dp" />
        </LinearLayout>

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/arrow_right_dark_gray"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="10dp"/>
    </LinearLayout>

</LinearLayout>
